--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CodePen - A Pen by Mohithpoojary</title>
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.2.0/css/all.css'>
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.2.0/css/fontawesome.css'>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/font-awesome-4.7.0/css/login.css">
 
 </head>
 
