--- a/modules/clearance/barangay_clearance.html
+++ b/modules/clearance/barangay_clearance.html
@@ -18,7 +18,6 @@
             margin: 10px auto;
             border-radius: 10px;
             background-color: #ffffff;
-            border: solid 3px #718f7460;
         }
 
         .certificate-header {
@@ -76,112 +75,27 @@
             grid-template-columns: auto auto;
             padding: 10px;
         }
-
-        .buttons{
-            margin-top: 37%;
-            margin-left: 47%;
-            position:fixed;
-        }
-        .buttons .print{
-            width: 100px;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-family: Arial, sans-serif;
-            font-weight: bold;
-            font-size:16px;
-            box-shadow: 0 3px 5px #999;
-        }
-        .buttons .back{
-            width: 100px;
-            padding: 10px;
-            color: #4b4848;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-family: Arial, sans-serif;
-            font-weight: bold;
-            font-size:16px;
-            box-shadow: 0 3px 5px #999;
-        }
-        .back:hover {
-           background-color: #FAFAFA;
-        }
-
-        .print:hover {
-            background-color: #45a049;
-        }
-        @media print {
-        .print{
-                display:none;
-        }
-        .back{
-                display:none;
-        }
-        .certificate {
-            max-width: 8.5in;
-            /* Legal page width */
-            margin: 10px auto;
-            border-radius: 10px;
-            background-color: #ffffff;
-            border: none;
-        }
-        @page {
-            margin: 0.3in 1in 0.3in 1in !important
-        }
-        }
     </style>
 </head>
 
 <body>
-<?php 
-$page = 'Certificate';
-include "../../db_conn.php";
-$id = $_GET['id'];
-$print = $_GET['print'];
-$amount = $_POST['amount'];
-$purpose = $_POST['purpose'];
-$date_issued = $_POST['date_issued'];
-$date = date_create($date_issued);
-$format_date = date_format($date,"jS \d\a\y \of F\, Y");
-$squery =  mysqli_query($conn, "SELECT * from resident Where id = '$id'");
-while ($row = mysqli_fetch_array($squery)) {
-    $gender;
-    if($row['gender'] == "Female" &&  $row['civil_status'] == "single"){
-        $gender = "Ms.";
-    }elseif($row['gender'] == "Female" &&  $row['civil_status'] == "married"){
-        $gender = "Mrs.";
-    }else{
-        $gender = "Mr.";
-    }
-
-    $middle_name = $row['middle_name'];
-    $get_initial = substr($middle_name, 0, 1);
-    if($middle_name == ""){
-        $middle_initial = "";
-    }else{
-        $middle_initial = strtoupper($get_initial.".");
-    }
- ?>
 
     <div class="certificate">
         <div class="certificate-header">
             <img class="logo1" src="../../assets/img/republic.png" alt="Barangay Logo">
             <label>
                 <span
-                    style="font-size: 13px; font-family: Copperplate,Copperplate Gothic Light,fantasy; color: black;">Republic
+                    style="font-size: 13px; font-family: Copperplate,Copperplate Gothic Light,fantasy; font-weight:bolder; color: black;">Republic
                     of the Philippines</span>
                 <br>
-                <p style="font-family: Arial; font-size: 11px;  margin: 0;">Province of
+                <p style="font-family: Arial; font-size: 11px; font-weight:bold; margin: 0;">Province of
                     Sarangani
                 </p>
-                <p style="font-family: Arial; font-size: 11px;  margin: 0;">
+                <p style="font-family: Arial; font-size: 11px; font-weight:bold; margin: 0;">
                     Municipality of Malungon
                 </p>
-                <span style="font-size:14px; font-family: Copperplate, 'Copperplate Gothic Light', fantasy;">
+                <span style="font-size:14px; font-family: Copperplate, 'Copperplate Gothic Light', fantasy;
+                font-weight:bolder">
                     Barangay of Alkikan</span>
                 <br>
                 <br>
@@ -197,7 +111,7 @@ while ($row = mysqli_fetch_array($squery)) {
             <div class="grid-item1">
                 <hr
                     style="height:4px;border:none;background-color:rgb(82, 11, 11); margin-left: 10px; margin-right: 10px; margin-bottom: 0;">
-                <span style=" font-size: 11px; color:blue">LIST OF BRGY. OFFICIAL OF ALKIKAN</span>
+                <span style=" font-size: 11px;">LIST OF BRGY. OFFICIAL OF ALKIKAN</span>
                 <br>
                 <br>
                 <span style="font-size:14px; font-weight: bold; margin-bottom: 0;">HON. NILO H. ARELLANO</span>
@@ -271,29 +185,37 @@ while ($row = mysqli_fetch_array($squery)) {
                 <h1
                     style="font-size: 18px; font-weight: bolder; margin: 0; text-align: center; font-family: Arial Black;">
                     BARANGAY
-                    CERTIFICATE
+                    CLEARANCE
                 </h1>
                 <br>
                 <span
                     style="font-size:15px; font-family: Algerian; font-weight:bold; display: flex;align-items: center;">TO
                     WHOM IT MAY CONCERN:</span>
                 <p style="font-size: 15px; font-family: Arial, Helvetica, sans-serif;text-align: justify;
-                text-justify: inter-word;">
-                    This is to certify that <b><?php echo  $gender ?> <?php echo $row['first_name']." ".$middle_initial." ".$row['last_name']." ".$row['suffix']?></b>, of legal
-                    age, <?php echo  $row['civil_status'] ?>, Filipino Citizen, and a bona fide resident of <?php echo  $row['purok'] ?>, Barangay Alkikan, Malungon Sarangani Province.</p>
+                text-justify: inter-word; text-indent: 50px;">
+                    THIS IS TO CERTIFY that based on the records of this Barangay of date the person whose name personal
+                    circumstances and signature below has not been accused nor has a pending case with the Lupong
+                    Tagapamayapa of neither crime involving moral turpitude nor act contrary to our existing law;</p>
 
                 <p style="font-size: 15px; font-family: Arial, Helvetica, sans-serif;text-align: justify;
                     text-justify: inter-word;">
-                    This Barangay certification is being issued upon the request of
-                    the above mentioned name in connection with his desire to <?php echo $purpose ?>
-                    and whatever legal purposes that may serve him best.</p>
-
-                <p style="font-size: 15px; font-family: Arial, Helvetica, sans-serif;text-align: justify;
-                    text-justify: inter-word;">
-                    Issued this <b><?php echo $format_date ?></b> at Barangay Hall,
-                    Alkikan, Malungon, Sarangani Province.
+                    Name: <b>ALEJANDRO A. ARELLANO</b> <br>
+                    Address: <b>Purok Bag-o,Barangay Alkikan, Malungon, Sarangani Province </b><br>
+                    Civil Status: <b>Married</b><br>
+                    Citizenship: <b>Filipino</b><br>
+                    Occupation: <b>Farmer</b><br>
                 </p>
 
+                <p style="font-size: 15px; font-family: Arial, Helvetica, sans-serif;text-align: justify;
+                    text-justify: inter-word;">
+                    THIS BARANGAY CERTIFICATION is issued upon the request of the above named person for his desire to
+                    apply ECDC CONSTRUCTION and for whatever purposes that may serve him best
+                </p>
+
+                <p style="font-size: 15px; font-family: Arial, Helvetica, sans-serif;text-align: justify;
+                text-justify: inter-word;">
+                    Issued this 12nd day of February, 2024 at Barangay Hall, Alkikan, Malungon, Sarangani Province.
+                </p>
                 <br>
 
                 <div class="grid-container">
@@ -324,18 +246,15 @@ while ($row = mysqli_fetch_array($squery)) {
                         Signed in the absence of Punong Barangay:
                         <br>
                         <br>
-                        <hr style="height:1px; width: 200px; border:none;color:#333;background-color:#333; margin-bottom: 0;">
+                        <hr
+                            style="height:1px; width: 200px; border:none;color:#333;background-color:#333; margin-bottom: 0;">
                         <b style="font-size: 14px; font-family: serif;">Kagawad On Duty l</b>
                     </p>
                 </div>
-            </div>
-            <div class="buttons">
-            <button class="print" id="print" onclick="window.print();window.location.href='save.php?id=<?php echo $id ?>&amount=<?php echo $amount ?>&purpose=<?php echo $purpose ?>&date_issued=<?php echo $date_issued ?>'">Print</button>
-            <button class="back" onclick="history.back()">Back</button>
+
             </div>
         </div>
     </div>
-    <?php }?>
 </body>
 
 </html>
