--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div class="screen">
             <div class="screen__content">
                 <div class="login__header">
-                    <img src="logo.png" alt="Logo" class="login-logo">
+                    <img src="assets/img/republic.png" alt="Logo" class="login-logo">
                     <h2>PROFILING MANAGEMENT SYSTEM</h2>
                 </div>
                 <form class="login">
                     <div class="login__field">
-                        <i class="login__icon fas fa-user"></i>
+                        <i class="login__ic on fas fa-user"></i>
                         <input type="text" class="login__input" placeholder="User Name">
                     </div>
                     <div class="login__field">
